--- a/frontend/app/src/components/FeedbackTool/FeedbackFlag/feedbackFlag.css
+++ b/frontend/app/src/components/FeedbackTool/FeedbackFlag/feedbackFlag.css
@@ -10,6 +10,7 @@
   border: 1px solid var(--yellow-light);
   background: #fff;
   right: 0;
+  user-select: none;
   z-index: 1;
 }
 
